# moni

./: .gitignore  .mcp.json  .npmrc  .vercelignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vercel.json
.claude/: settings.local.json
.claude/skills/architecture-specialist/references/: engineering_backend_backend-architect.md  engineering_frontend_senior-frontend-architect.md  engineering_middlend_architect-review.md  engineering_middlend_cloud-architect.md  senior_backend_golang_typesicprt-architect.md  specialized_vue_vue-component-architect.md  universal_api-architect.md
.claude/skills/backend-specialist/references/: cursor_rules_actix-web.md  cursor_rules_apollo-client.md  cursor_rules_apollo-graphql.md  cursor_rules_asp-net.md  cursor_rules_bash.md  cursor_rules_bottle.md  cursor_rules_bun.md  cursor_rules_c-sharp.md  cursor_rules_git.md  (+40 more)
.claude/skills/file-organizer/: SKILL.md
.claude/skills/mcp-builder/: SKILL.md
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx
apps/web/components/: add-asset-dialog.tsx  language-toggle.tsx  logo.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/i18n/: config.ts  request.ts
apps/web/lib/: actions.ts  data.ts
docs/: okx-llm-trading.md
docs/plans/: 2025-01-19-moni-design.md
messages/: en.json  zh.json
services/okx_bot/: README.md  pyproject.toml
services/okx_bot/okx_bot/: config.py  main.py
services/okx_bot/okx_bot/api/: routes.py
services/okx_bot/okx_bot/state/: store.py
(+240 files in other folders)
